k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: task-manager
spec:
  selector:
    app: ui
  ports:
  - port: 3000
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
